--- a/apps/eosc/index.html
+++ b/apps/eosc/index.html
@@ -6,7 +6,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="dans-dv-react-root"></div>
+    <div id="actionButtonBlock"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
